# jurnalo

./: .env  .gitignore  Cargo.toml  README.md  build-bak.rs  developer_notes.md  diesel.toml
.github/workflows/: rust-clippy.yml  rust.yml
migrations/2023-09-13-230129_create_tables/: down.sql  up.sql
mockdb/: settings.json  toml_test.toml
src/: backend.rs  errors.rs  json_utils.rs  main.rs  models.rs  schema.rs  toml_utils.rs
src/backend/: api.rs  mod.rs  schema.rs  toml_utils.rs
src/backend/api/: mod.rs  patch.rs
src/backend/initial_setup/: mod.rs  toml_utils.rs
src/cli_parsing/: clap_structs.rs  dispatch.rs  mod.rs
src/modes/: alter.rs  mod.rs  print.rs  quick_note.rs  run_quiz.rs
