[package]
name = "jurnalo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
diesel = { version = "2.1.1", features = ["sqlite"] }
dotenvy = "0.15"

[[bin]]
name = "jurnalo"
path = "src/main.rs"

[[bin]]
name = "backend"
path = "src/backend.rs"