[package]
name = "jurnalo"
version = "0.1.0"
edition = "2021"
default-run = "jurnalo"
readme = "README.md"
repository = "https://github.com/meee-low/jurnalo/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
diesel = { version = "2.1.1", features = ["sqlite", "chrono"] }
diesel_migrations= "2.1.0"
chrono = "0.4.30"
# serde = "1.0.188"
dotenvy = "0.15"

[[bin]]
name = "jurnalo"
path = "src/main.rs"

[[bin]]
name = "backend"
path = "src/backend.rs"
