[package]
name = "jurnalo"
version = "0.1.0"
edition = "2021"
default-run = "jurnalo"
readme = "README.md"
repository = "https://github.com/meee-low/jurnalo/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.1", features = ["sqlite", "chrono"] }
diesel_migrations= "2.1.0"
chrono = "0.4.30"
serde = { version = "1.0.188", features = ["rc"] }
serde_derive = "1.0.188"
toml = "0.8.0"
dotenvy = "0.15"
thiserror = "1.0.48"
itertools = "0.11.0"
log = "0.4.20"
clap = { version = "4.4.6", features = ["derive"] }

[[bin]]
name = "jurnalo"
path = "src/main.rs"

# [[bin]]
# name = "backend"
# path = "src/backend.rs"
